<?xml version="1.0"?>
<package>
  <name>genpy</name>
  <version>0.4.16</version>
  <description>Python ROS message and service generators.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="bugtracker">https://github.com/ros/genpy/issues</url>
  <url type="repository">https://github.com/ros/genpy</url>

  <author>Ken Conley</author>
  <author>Troy Straszheim</author>
  <author>Morten Kjaergaard</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>

  <run_depend>genmsg</run_depend>

  <export>
    <message_generator>py</message_generator>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
